debug
rm: cannot remove 'a.out': No such file or directory
rm: cannot remove 'a.s': No such file or directory
ast.cpp:37:14: warning: ‘i1’ defined but not used [-Wunused-variable]
 static Type *i1 = IntegerType::get(TheContext, 1);
              ^
Error: 
Right is 16

Error: 
AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAa

Error: Variable is wrong type(Integer expected)
Error: 
AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAa

Error: 
Left is 8

Error: 
Right is 8

Error: 
Left is 8

Error: 
Right is 8

Error: 
Left is 8

Error: 
Right is 8

Error: 
Left is 8

Error: 
Right is 8

Error: 
Left is 8

Error: 
Right is 8

Error: 
Left is 8

Error: 
Right is 8

Error: 
Left is 8

Error: 
Right is 8

Error: 
Left is 8

Error: 
Right is 8

Error: 
Left is 16

Error: 
Right is 16

Error: 
Left is 16

Error: 
Right is 16

Function context does not match Module context!
void ()* @main
Stored value type does not match pointer operand type!
  store i8 97, i8* %c22
 i8Stored value type does not match pointer operand type!
  store i8 100, i8* %c26
 i8Stored value type does not match pointer operand type!
  store i8 97, i8* %c30
 i8Stored value type does not match pointer operand type!
  store i8 115, i8* %c34
 i8Stored value type does not match pointer operand type!
  store i8 102, i8* %c38
 i8Stored value type does not match pointer operand type!
  store i8 97, i8* %c42
 i8Stored value type does not match pointer operand type!
  store i8 100, i8* %c46
 i8Stored value type does not match pointer operand type!
  store i8 0, i8* %c50
 i8Stored value type does not match pointer operand type!
  store i16 3, i16* %a54
 i16Stored value type does not match pointer operand type!
  store i16 1, i16* %a58
 i16Call parameter type does not match function signature!
  %a61 = load i16, i16* %a60
 i16  call void @writeInteger(i16 %a61)
Call parameter type does not match function signature!
  %x69 = load i16, i16* %x
 i16  call void @writeInteger(i16 %x69)
Function context does not match Module context!
i16 ([100 x i16]*, [100 x i16]*, [100 x i8]*, [100 x i8]*, i16*, i8*, i16*)* @hehe
Stored value type does not match pointer operand type!
  store i16 2, [100 x i16]* %a12
 [100 x i16]Stored value type does not match pointer operand type!
  store i16* %x18, i16* %x20
 i16Call parameter type does not match function signature!
  %a23 = load [100 x i16], [100 x i16]* %a22
 i16  call void @writeInteger([100 x i16] %a23)
Function return type does not match operand type of return inst!
  ret i16 5
 i16The faulty IR is:
------------------------------------------------

llc: a.ll:164:9: error: stored value and pointer type do not match
  store i16 2, [100 x i16]* %a12
        ^
clang: error: no such file or directory: 'a.s'
opt: a.ll:164:9: error: stored value and pointer type do not match
  store i16 2, [100 x i16]* %a12
        ^
do.sh: 13: do.sh: ./a.out: not found
